--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,7 +27,7 @@ h3 {
 }
 
 .top-section {
-    background-image: url('../images/mountain.svg');
+    background-image: url('../images/mountains.webp');
     background-size: cover;
     height: 100vh;
     min-height: 700px;
