Feature Addition: Counter

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -367,5 +367,8 @@ h3 {
 #######################################################################
 */
 
-
+.counter {
+  font-size: 0.75rem;
+  margin-top: 10px;
+}
 
